--- a/Practicas/Calculadora/style.css
+++ b/Practicas/Calculadora/style.css
@@ -49,3 +49,13 @@
     cursor: pointer;
     font-size: 15px;   
 }
+@media(width<=768px){
+    .container{
+        background-color:rgb(52, 50, 50);
+    }
+}
+@media(width<=468px){
+    .container{
+        background-color:rgb(0, 0, 0);
+    }
+}
